--- a/_includes/author-profile.html
+++ b/_includes/author-profile.html
@@ -37,9 +37,8 @@
         <li><a href="mailto:{{ author.email }}"><i class="fas fa-fw fa-envelope icon-pad-right" aria-hidden="true"></i>{{ site.data.ui-text[site.locale].email_label | default: "Email" }}</a></li>
       {% endif %}
       {% if author.phone %}
-        <li><i class="fas fa-phone"></i> {{ author.phone }}</li>
+        <li><a href="tel:{{ author.phone }}"><i class="fas fa-fw fa-phone icon-pad-right" aria-hidden="true"></i>{{ author.phone }}</a></li>
       {% endif %}
-
 
       <!-- Font Awesome and Academicons icons / Academic websites -->
       {% if author.academia %}
