--- a/_includes/author-profile.html
+++ b/_includes/author-profile.html
@@ -10,7 +10,7 @@
     {% if author.avatar contains "://" %}
     	<img src="https://github.com/Dannyjhl/JIAHAO.github.io/blob/master/images/profile.png"  fetchpriority="high" />
     {% else %}
-    	<img src="https://github.com/Dannyjhl/JIAHAO.github.io/blob/master/images/profile.png}"  fetchpriority="high" />
+    	<img src="https://github.com/Dannyjhl/JIAHAO.github.io/blob/master/images/profile.png"  fetchpriority="high" />
     {% endif %}
   </div>
 
