--- a/_includes/author-profile.html
+++ b/_includes/author-profile.html
@@ -8,9 +8,9 @@
 
   <div class="author__avatar">
     {% if author.avatar contains "://" %}
-    	<img src="https://raw.githubusercontent.com/Dannyjhl/JIAHAO.github.io/master/images/profile.png"  fetchpriority="high" />
+    	<img src="https://raw.githubusercontent.com/Dannyjhl/JIAHAO.github.io/master/images/ddd.png"  fetchpriority="high" />
     {% else %}
-    	<img src="https://raw.githubusercontent.com/Dannyjhl/JIAHAO.github.io/master/images/profile.png"  fetchpriority="high" />
+    	<img src="https://raw.githubusercontent.com/Dannyjhl/JIAHAO.github.io/master/images/ddd.png"  fetchpriority="high" />
     {% endif %}
   </div>
 
